# automations

./: .gitignore  README.md  config.yaml.demo  progress-to-hundred.md  pyproject.toml
doc/how-to/: add-automation.md
doc/instructions/: 001_poc.md  advanced-project-cards.md
src/automations/: __init__.py  cli.py  config.py  context.py  dto.py  log_store.py  models.py  registry.py  runner.py
src/automations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/automations/automations/: __init__.py  base.py  github_repo_count.py  obsidian_md_count.py  publish_portfolio_from_obs.py  unedited_kindle_notes.py  wallpaper_from_report.py
src/automations/automations/daily_repo_maintain/: __init__.py  main.py
src/automations/automations/git_commit_tracker/: __init__.py  main.py
src/automations/automations/github_repo_count/: __init__.py  main.py
src/automations/automations/obsidian_edit_tracker/: __init__.py  main.py
src/automations/automations/obsidian_essay_to_website/: __init__.py  inspiration_note.md  inspiration_site.md  main.py  spec.md
src/automations/automations/obsidian_md_count/: __init__.py  main.py
src/automations/automations/progress_to_hundred/: __init__.py  main.py
src/automations/automations/project_cards/: README.md  __init__.py  main.py  template.html
src/automations/automations/project_command_center/: README.md  __init__.py  (+5 more)
src/automations/logging/: __init__.py  log_writer.py
src/automations/report/: __init__.py  html.py  template.html
src/automations/services/: __init__.py  github.py  obsidian.py  registry.py
(+14 files in other folders)
